tests/jsx_intrinsics.builtin/jsx_intrinsics.builtin.exp
Error: main.js:8
  8: var b: React$Node<{|prop1: string|}> = <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element `CustomComponent`
  8: var b: React$Node<{|prop1: string|}> = <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React$Element. This type is incompatible with
  8: var b: React$Node<{|prop1: string|}> = <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: type application of class `React$Element` | string | number | type application of identifier `Iterable`
  Member 1:
   13:   | React$Element<Config>
           ^^^^^^^^^^^^^^^^^^^^^ type application of class `React$Element`. See lib: <BUILTINS>/react.js:13
  Error:
    8: var b: React$Node<{|prop1: string|}> = <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `prop`. Property not found in
    8: var b: React$Node<{|prop1: string|}> = <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
                         ^^^^^^^^^^^^^^^^^ object type
  Member 2:
   14:   | string
           ^^^^^^ string. See lib: <BUILTINS>/react.js:14
  Error:
    8: var b: React$Node<{|prop1: string|}> = <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React$Element. This type is incompatible with
   14:   | string
           ^^^^^^ string. See lib: <BUILTINS>/react.js:14
  Member 3:
   15:   | number
           ^^^^^^ number. See lib: <BUILTINS>/react.js:15
  Error:
    8: var b: React$Node<{|prop1: string|}> = <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React$Element. This type is incompatible with
   15:   | number
           ^^^^^^ number. See lib: <BUILTINS>/react.js:15
  Member 4:
   16:   | Iterable<React$Node<Config>>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type application of identifier `Iterable`. See lib: <BUILTINS>/react.js:16
  Error:
   16:   | Iterable<React$Node<Config>>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `@@iterator` of $Iterable. Property not found in. See lib: <BUILTINS>/react.js:16
    8: var b: React$Node<{|prop1: string|}> = <CustomComponent prop="asdf" />; // Error: Props<{prop}> ~> Props<{prop1}>
                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React$Element

Error: main.js:15
 15: var d: React$Node<{|doesntmatch: string|}> = <div not_a_real_attr="asdf" />;
                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element `div`
 15: var d: React$Node<{|doesntmatch: string|}> = <div not_a_real_attr="asdf" />;
                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React$Element. This type is incompatible with
 15: var d: React$Node<{|doesntmatch: string|}> = <div not_a_real_attr="asdf" />;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: type application of class `React$Element` | string | number | type application of identifier `Iterable`
  Member 1:
   13:   | React$Element<Config>
           ^^^^^^^^^^^^^^^^^^^^^ type application of class `React$Element`. See lib: <BUILTINS>/react.js:13
  Error:
   15: var d: React$Node<{|doesntmatch: string|}> = <div not_a_real_attr="asdf" />;
                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `not_a_real_attr`. Property not found in
   15: var d: React$Node<{|doesntmatch: string|}> = <div not_a_real_attr="asdf" />;
                         ^^^^^^^^^^^^^^^^^^^^^^^ object type
  Member 2:
   14:   | string
           ^^^^^^ string. See lib: <BUILTINS>/react.js:14
  Error:
   15: var d: React$Node<{|doesntmatch: string|}> = <div not_a_real_attr="asdf" />;
                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React$Element. This type is incompatible with
   14:   | string
           ^^^^^^ string. See lib: <BUILTINS>/react.js:14
  Member 3:
   15:   | number
           ^^^^^^ number. See lib: <BUILTINS>/react.js:15
  Error:
   15: var d: React$Node<{|doesntmatch: string|}> = <div not_a_real_attr="asdf" />;
                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React$Element. This type is incompatible with
   15:   | number
           ^^^^^^ number. See lib: <BUILTINS>/react.js:15
  Member 4:
   16:   | Iterable<React$Node<Config>>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type application of identifier `Iterable`. See lib: <BUILTINS>/react.js:16
  Error:
   16:   | Iterable<React$Node<Config>>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `@@iterator` of $Iterable. Property not found in. See lib: <BUILTINS>/react.js:16
   15: var d: React$Node<{|doesntmatch: string|}> = <div not_a_real_attr="asdf" />;
                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React$Element


Found 2 errors
